Fixed: Agenda view on mobile
(cherry picked from commit 34e928ebed5e258f3481f88e0163bfecfce2b120)

--- a/frontend/src/Calendar/Agenda/AgendaEvent.css
+++ b/frontend/src/Calendar/Agenda/AgendaEvent.css
@@ -83,7 +83,7 @@
 }
 
 @media only screen and (max-width: $breakpointSmall) {
-  .event {
+  .overlay {
     flex-direction: column;
   }
 
